整合netty，修复若干BUG
Signed-off-by: waiter2020 <1403976416@qq.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,4 +38,15 @@ jwt:
       refresh: refresh
       register: "auth/register"
 
+tcp:
+  port: 5432
+boss:
+  thread:
+    count: 2
+worker:
+  thread:
+    count: 2
+so:
+  keepalive:  true
+  backlog: 100
 
