--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,38 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/my2018?characterEncoding=utf8&useSSL=false
-    username: root
-    password: 690818
+    url: jdbc:mysql://139.199.20.39:3306/water?characterEncoding=utf8&useSSL=false
+    username: bluedream
+    password: 123456
+#    username: root
+#    password: 690818
     test-while-idle: true
     validation-query: SELECT 1
 
+    type: com.alibaba.druid.pool.DruidDataSource
+
+    initialSize: 5
+    minIdle: 5
+    maxActive: 200
+    maxWait: 60000
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: SELECT 1 FROM DUAL
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: true
+    #   配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+    filters: stat,wall,log4j2
+    maxPoolPreparedStatementPerConnectionSize: 20
+    useGlobalDataSourceStat: true
+    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
+
   thymeleaf:
     mode: LEGACYHTML5
+    prefix: classpath:/templates/
+    encoding: utf-8
+    suffix: .html
+    cache: false
   jpa:
     show-sql: true
     hibernate:
@@ -21,7 +46,7 @@ spring:
   mvc:
     date-format: yyyy-MM-dd'T'HH:mm
 server:
-  port: 8080
+  port: 8081
 app:
   jwt:
   header: token
@@ -41,7 +66,7 @@ jwt:
       register: "auth/register"
 
 tcp:
-  port: 5432
+  port: 5433
 boss:
   thread:
     count: 2
