漏失消息推送
Signed-off-by: waiter2020 <1403976416@qq.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -91,3 +91,6 @@ so:
   keepalive:  true
   backlog: 100
 
+water-app:
+  masterSecret: c2a68f5c855cc2ce3bfac548
+  appKey: d7829e5212fa4e65d461ba5b
