--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://139.199.20.39:3306/water?characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/water?characterEncoding=utf8&useSSL=false
     username: bluedream
     password: 123456
 #    username: root
@@ -32,7 +32,7 @@ spring:
     prefix: classpath:/templates/
     encoding: utf-8
     suffix: .html
-    cache: false
+    cache: true
   jpa:
     show-sql: true
     hibernate:
@@ -74,7 +74,7 @@ app:
   tokenHead: ttttt
   expire: 5184000
   secret: aHR0cHM6Ly9teS5vc2NoaW5hLm5ldC91LzM2ODE4Njg=
-  dir: /home/waiter/app
+  dir: /home/centos/app
 jwt:
   header: Authorization
   secret: mySecret
@@ -105,7 +105,7 @@ water-app:
 
 logging:
   file: water.log
-  path: /home/waiter/logs/
+  path: /home/centos/logs/
   level:
     org.springframework: warn
     com.example.water: trace
