--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,10 @@
 spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/water?characterEncoding=utf8&useSSL=false
+#    url: jdbc:mysql://59.110.163.243:3306/water?characterEncoding=utf8&useSSL=false
     username: bluedream
     password: 123456
-#    username: root
+#    username: waiter
 #    password: 690818
     test-while-idle: true
     validation-query: SELECT 1
